# ancore

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  PR_DESCRIPTION.md  README.md  RFC.md  SECURITY.md  eslint.config.cjs  package.json  pnpm-lock.yaml  tsconfig.base.json
contracts/: Cargo.toml  README.md
contracts/account/: README.md
contracts/account/src/: lib.rs
contracts/account/test_snapshots/test/: test_add_session_key.1.json  test_add_session_key_emits_event.1.json  test_add_session_key_nonzero_expiry_succeeds.1.json  test_add_session_key_zero_expiry_rejected.1.json  test_double_initialize.1.json  test_execute_cross_contract_invocation.1.json  test_execute_emits_event.1.json  test_execute_rejects_duplicate_nonce.1.json  test_execute_session_key_end_to_end.1.json  test_execute_session_key_expired.1.json  test_execute_session_key_missing_payload_returns_invalid_signature.1.json  test_execute_session_key_missing_signature_rejected.1.json  test_has_session_key_after_revoke.1.json  test_has_session_key_present.1.json  test_initialize.1.json  test_initialize_emits_event.1.json  test_migrate_1_to_2_succeeds.1.json  test_migrate_emits_migrated_event.1.json  test_migrate_rejects_equal_version.1.json  test_migrate_rejects_non_increasing_version.1.json  test_refresh_session_key_ttl.1.json  test_refresh_session_key_ttl_unknown_key_returns_session_key_not_found.1.json  test_revoke_session_key_emits_event.1.json  (+7 more)
contracts/budgets/: wasm-budgets.json
contracts/validation-modules/: Cargo.toml  README.md
contracts/validation-modules/src/: lib.rs
(+322 files in other folders)
